// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`server capability snapshots > hackerspub > adapter 1`] = `"hackerspub"`;

exports[`server capability snapshots > hackerspub > capabilities 1`] = `
{
  "accounts.followers": "supported:static",
  "accounts.following": "supported:static",
  "accounts.lookupByHandle": "supported:static",
  "accounts.lookupById": "supported:static",
  "accounts.relationships": "supported:static",
  "accounts.updateProfile": "supported:static",
  "auth.oauth.authorizationCode": "unsupported:probe:HackersPub does not use OAuth.",
  "auth.oauth.clientCredentials": "unsupported:static:HackersPub does not expose OAuth client authentication.",
  "auth.oauth.refreshToken": "unsupported:static:HackersPub does not expose OAuth refresh tokens.",
  "auth.passkey": "unsupported:static:HackersPub passkey login is not exposed through this adapter API.",
  "auth.tokenInjection": "supported:static",
  "filters.create": "unsupported:static:HackersPub filters are not mapped by this adapter.",
  "filters.delete": "unsupported:static:HackersPub filters are not mapped by this adapter.",
  "filters.read": "unsupported:static:HackersPub filters are not mapped by this adapter.",
  "filters.update": "unsupported:static:HackersPub filters are not mapped by this adapter.",
  "followRequests.accept": "unsupported:static:HackersPub follow requests are not mapped by this adapter.",
  "followRequests.list": "unsupported:static:HackersPub follow requests are not mapped by this adapter.",
  "followRequests.reject": "unsupported:static:HackersPub follow requests are not mapped by this adapter.",
  "instance.nodeInfo": "supported:static",
  "instance.oauthMetadata": "unknown:static",
  "instance.peers": "unsupported:static:Peer listing is not mapped by this adapter.",
  "lists.create": "unsupported:static:HackersPub lists are not mapped by this adapter.",
  "lists.delete": "unsupported:static:HackersPub lists are not mapped by this adapter.",
  "lists.members": "unsupported:static:HackersPub lists are not mapped by this adapter.",
  "lists.read": "unsupported:static:HackersPub lists are not mapped by this adapter.",
  "lists.update": "unsupported:static:HackersPub lists are not mapped by this adapter.",
  "media.delete": "unsupported:static:Media deletion is not mapped by this adapter.",
  "media.remoteUrlUpload": "supported:static",
  "media.update": "unsupported:static:Media updates are not mapped by this adapter.",
  "media.upload": "unsupported:static:HackersPub can upload images, but its createNote GraphQL API cannot attach uploaded media.",
  "media.urlIngestion": "unsupported:static:URL media ingestion is not mapped by this adapter.",
  "notifications.clear": "unsupported:static:HackersPub can mark notifications as read, but that mutation does not remove them from notification listing.",
  "notifications.dismiss": "unsupported:static:HackersPub exposes a bulk mark-read mutation but no mapped single-notification dismiss operation.",
  "notifications.grouped": "unsupported:static:HackersPub does not expose grouped notifications in the mapped GraphQL API.",
  "notifications.list": "supported:static",
  "notifications.pleromaChatMention": "unsupported:static:Pleroma-specific notification types do not apply to HackersPub.",
  "notifications.pleromaEmojiReaction": "unsupported:static:Pleroma-specific notification types do not apply to HackersPub.",
  "notifications.pleromaReport": "unsupported:static:Pleroma-specific notification types do not apply to HackersPub.",
  "notifications.unreadCount": "unsupported:static:HackersPub unread notification counts are not exposed by the mapped GraphQL API.",
  "polls.create": "unsupported:static:HackersPub poll creation is not mapped yet.",
  "polls.read": "supported:static",
  "polls.vote": "supported:static",
  "posts.create": "supported:static",
  "posts.delete": "supported:static",
  "posts.history": "unsupported:static:HackersPub does not expose edit history.",
  "posts.quote": "supported:static",
  "posts.read": "supported:static",
  "posts.reply": "supported:static",
  "posts.translate": "unsupported:static:Post translation is not mapped by this adapter.",
  "posts.update": "unsupported:static:HackersPub note editing is not exposed through the mapped GraphQL API.",
  "scheduledPosts.create": "unsupported:static:HackersPub scheduled posts are not mapped by this adapter.",
  "scheduledPosts.delete": "unsupported:static:HackersPub scheduled posts are not mapped by this adapter.",
  "scheduledPosts.read": "unsupported:static:HackersPub scheduled posts are not mapped by this adapter.",
  "scheduledPosts.update": "unsupported:static:HackersPub scheduled posts are not mapped by this adapter.",
  "search.accounts": "supported:static",
  "search.hashtags": "unsupported:static:HackersPub hashtag search is not mapped by this adapter yet.",
  "search.posts": "supported:static",
  "social.block": "supported:static",
  "social.bookmark": "supported:static",
  "social.bookmarkFolders": "unsupported:static:Bookmark folders are not mapped by this adapter.",
  "social.boost": "supported:static",
  "social.favourite": "supported:static",
  "social.follow": "supported:static",
  "social.mute": "unsupported:static:HackersPub social actions are not mapped yet.",
  "social.reaction": "supported:static",
  "streaming.conversations": "unsupported:static:HackersPub streaming APIs are not mapped by this adapter.",
  "streaming.notifications": "unsupported:static:HackersPub streaming APIs are not mapped by this adapter.",
  "streaming.timeline": "unsupported:static:HackersPub streaming APIs are not mapped by this adapter.",
  "timelines.hashtag": "unsupported:static:HackersPub hashtag timelines are not mapped yet.",
  "timelines.home": "supported:static",
  "timelines.list": "unsupported:static:HackersPub list timelines are not mapped by this adapter.",
  "timelines.local": "supported:static",
  "timelines.public": "supported:static",
}
`;

exports[`server capability snapshots > hollo > adapter 1`] = `"hollo"`;

exports[`server capability snapshots > hollo > capabilities 1`] = `
{
  "accounts.followers": "supported:static",
  "accounts.following": "supported:static",
  "accounts.lookupByHandle": "supported:static",
  "accounts.lookupById": "supported:static",
  "accounts.relationships": "unsupported:static:Hollo relationship reads are not compatible with the Mastodon relationship API.",
  "accounts.updateProfile": "supported:static",
  "auth.oauth.authorizationCode": "supported:oauth",
  "auth.oauth.clientCredentials": "unsupported:static:Client-credentials OAuth is not mapped by this adapter.",
  "auth.oauth.refreshToken": "unsupported:static:This adapter does not assume refresh-token support.",
  "auth.passkey": "unsupported:static:Passkey auth is not mapped by this adapter.",
  "auth.tokenInjection": "supported:static",
  "filters.create": "unsupported:static:Hollo does not expose filters.",
  "filters.delete": "unsupported:static:Hollo does not expose filters.",
  "filters.read": "unsupported:static:Hollo does not expose filters.",
  "filters.update": "unsupported:static:Hollo does not expose filters.",
  "followRequests.accept": "supported:static",
  "followRequests.list": "supported:static",
  "followRequests.reject": "supported:static",
  "instance.nodeInfo": "supported:static",
  "instance.oauthMetadata": "unknown:static",
  "instance.peers": "unsupported:static:Peer listing is not mapped by this adapter.",
  "lists.create": "supported:static",
  "lists.delete": "supported:static",
  "lists.members": "supported:static",
  "lists.read": "supported:static",
  "lists.update": "supported:static",
  "media.delete": "unsupported:static:Hollo does not expose media deletion.",
  "media.remoteUrlUpload": "unsupported:static:Remote URL media upload is not mapped by this adapter.",
  "media.update": "supported:static",
  "media.upload": "supported:static",
  "media.urlIngestion": "unsupported:static:URL media ingestion is not mapped by this adapter.",
  "notifications.clear": "unsupported:static:Hollo does not expose Mastodon v1 notification clearing.",
  "notifications.dismiss": "unsupported:static:Hollo does not expose Mastodon v1 notification dismiss.",
  "notifications.grouped": "unsupported:static:Grouped notifications are not mapped by this adapter.",
  "notifications.list": "supported:static",
  "notifications.pleromaChatMention": "unsupported:static:Pleroma-specific notification types are not mapped by this base adapter.",
  "notifications.pleromaEmojiReaction": "unsupported:static:Pleroma-specific notification types are not mapped by this base adapter.",
  "notifications.pleromaReport": "unsupported:static:Pleroma-specific notification types are not mapped by this base adapter.",
  "notifications.unreadCount": "supported:static:Hollo exposes notification unread counts through its v2 API.",
  "polls.create": "supported:static",
  "polls.read": "supported:static",
  "polls.vote": "supported:static",
  "posts.create": "supported:static",
  "posts.delete": "supported:static",
  "posts.history": "unsupported:static:Hollo does not expose status edit history.",
  "posts.quote": "supported:static",
  "posts.read": "supported:static",
  "posts.reply": "supported:static",
  "posts.translate": "unsupported:static:Post translation is not mapped by this adapter.",
  "posts.update": "supported:static:Hollo exposes Mastodon-compatible status editing.",
  "scheduledPosts.create": "unsupported:static:Hollo does not expose scheduled posts.",
  "scheduledPosts.delete": "unsupported:static:Hollo does not expose scheduled posts.",
  "scheduledPosts.read": "unsupported:static:Hollo does not expose scheduled posts.",
  "scheduledPosts.update": "unsupported:static:Hollo does not expose scheduled posts.",
  "search.accounts": "supported:static",
  "search.hashtags": "unsupported:static:Hollo hashtag search returns an empty upstream result set.",
  "search.posts": "supported:static",
  "social.block": "supported:static",
  "social.bookmark": "supported:static",
  "social.bookmarkFolders": "unsupported:static:Bookmark folders are not mapped by this adapter.",
  "social.boost": "supported:static",
  "social.favourite": "supported:static",
  "social.follow": "supported:static",
  "social.mute": "supported:static",
  "social.reaction": "supported:static",
  "streaming.conversations": "unsupported:static:Hollo does not expose streaming APIs.",
  "streaming.notifications": "unsupported:static:Hollo does not expose streaming APIs.",
  "streaming.timeline": "unsupported:static:Hollo does not expose streaming APIs.",
  "timelines.hashtag": "unsupported:static:Hollo hashtag timelines are not mapped by this adapter yet.",
  "timelines.home": "supported:static",
  "timelines.list": "supported:static",
  "timelines.local": "supported:static",
  "timelines.public": "supported:static",
}
`;

exports[`server capability snapshots > mastodon > adapter 1`] = `"mastodon"`;

exports[`server capability snapshots > mastodon > capabilities 1`] = `
{
  "accounts.followers": "supported:static",
  "accounts.following": "supported:static",
  "accounts.lookupByHandle": "supported:static",
  "accounts.lookupById": "supported:static",
  "accounts.relationships": "supported:static",
  "accounts.updateProfile": "supported:static",
  "auth.oauth.authorizationCode": "supported:oauth",
  "auth.oauth.clientCredentials": "unsupported:static:Client-credentials OAuth is not mapped by this adapter.",
  "auth.oauth.refreshToken": "unsupported:static:This adapter does not assume refresh-token support.",
  "auth.passkey": "unsupported:static:Passkey auth is not mapped by this adapter.",
  "auth.tokenInjection": "supported:static",
  "filters.create": "supported:static",
  "filters.delete": "supported:static",
  "filters.read": "supported:static",
  "filters.update": "unsupported:static:Mastodon v2 filter keyword replacement is not mapped by this adapter yet.",
  "followRequests.accept": "supported:static",
  "followRequests.list": "supported:static",
  "followRequests.reject": "supported:static",
  "instance.nodeInfo": "supported:static",
  "instance.oauthMetadata": "unknown:static",
  "instance.peers": "unsupported:static:Peer listing is not mapped by this adapter.",
  "lists.create": "supported:static",
  "lists.delete": "supported:static",
  "lists.members": "supported:static",
  "lists.read": "supported:static",
  "lists.update": "supported:static",
  "media.delete": "supported:static",
  "media.remoteUrlUpload": "unsupported:static:Remote URL media upload is not mapped by this adapter.",
  "media.update": "supported:static",
  "media.upload": "supported:static",
  "media.urlIngestion": "unsupported:static:URL media ingestion is not mapped by this adapter.",
  "notifications.clear": "supported:static",
  "notifications.dismiss": "supported:static",
  "notifications.grouped": "unsupported:static:Grouped notifications are not mapped by this adapter.",
  "notifications.list": "supported:static",
  "notifications.pleromaChatMention": "unsupported:static:Pleroma-specific notification types are not mapped by this base adapter.",
  "notifications.pleromaEmojiReaction": "unsupported:static:Pleroma-specific notification types are not mapped by this base adapter.",
  "notifications.pleromaReport": "unsupported:static:Pleroma-specific notification types are not mapped by this base adapter.",
  "notifications.unreadCount": "supported:static",
  "polls.create": "supported:static",
  "polls.read": "supported:static",
  "polls.vote": "supported:static",
  "posts.create": "supported:static",
  "posts.delete": "supported:static",
  "posts.history": "supported:static",
  "posts.quote": "unsupported:static:This adapter does not expose a stable quote-post API.",
  "posts.read": "supported:static",
  "posts.reply": "supported:static",
  "posts.translate": "unsupported:static:Post translation is not mapped by this adapter.",
  "posts.update": "supported:static",
  "scheduledPosts.create": "supported:static",
  "scheduledPosts.delete": "supported:static",
  "scheduledPosts.read": "supported:static",
  "scheduledPosts.update": "supported:static",
  "search.accounts": "supported:static",
  "search.hashtags": "supported:static",
  "search.posts": "supported:static",
  "social.block": "supported:static",
  "social.bookmark": "supported:static",
  "social.bookmarkFolders": "unsupported:static:Bookmark folders are not mapped by this adapter.",
  "social.boost": "supported:static",
  "social.favourite": "supported:static",
  "social.follow": "supported:static",
  "social.mute": "supported:static",
  "social.reaction": "unsupported:static:Mastodon-compatible base APIs do not assume emoji reaction support.",
  "streaming.conversations": "unsupported:static:Streaming is not implemented by this adapter yet.",
  "streaming.notifications": "supported:static",
  "streaming.timeline": "supported:instance",
  "timelines.hashtag": "supported:static",
  "timelines.home": "supported:static",
  "timelines.list": "supported:static",
  "timelines.local": "supported:static",
  "timelines.public": "supported:static",
}
`;

exports[`server capability snapshots > misskey > adapter 1`] = `"misskey"`;

exports[`server capability snapshots > misskey > capabilities 1`] = `
{
  "accounts.followers": "supported:static",
  "accounts.following": "supported:static",
  "accounts.lookupByHandle": "supported:static",
  "accounts.lookupById": "supported:static",
  "accounts.relationships": "supported:static",
  "accounts.updateProfile": "supported:static",
  "auth.oauth.authorizationCode": "supported:oauth",
  "auth.oauth.clientCredentials": "unsupported:static:Client-credentials OAuth is not mapped by this adapter.",
  "auth.oauth.refreshToken": "unsupported:static:Misskey OAuth access tokens do not use refresh tokens.",
  "auth.passkey": "unsupported:static:Passkey auth is not mapped by this adapter.",
  "auth.tokenInjection": "supported:static",
  "filters.create": "unsupported:static:Misskey filter-like moderation settings are not mapped.",
  "filters.delete": "unsupported:static:Misskey filter-like moderation settings are not mapped.",
  "filters.read": "unsupported:static:Misskey filter-like moderation settings are not mapped.",
  "filters.update": "unsupported:static:Misskey filter-like moderation settings are not mapped.",
  "followRequests.accept": "supported:static",
  "followRequests.list": "supported:static",
  "followRequests.reject": "supported:static",
  "instance.nodeInfo": "supported:static",
  "instance.oauthMetadata": "unknown:static",
  "instance.peers": "unsupported:static:Peer listing is not mapped by this adapter.",
  "lists.create": "supported:static",
  "lists.delete": "supported:static",
  "lists.members": "supported:static",
  "lists.read": "supported:static",
  "lists.update": "supported:static",
  "media.delete": "supported:static",
  "media.remoteUrlUpload": "supported:static",
  "media.update": "supported:static",
  "media.upload": "supported:static",
  "media.urlIngestion": "unsupported:static:URL media ingestion is not mapped by this adapter.",
  "notifications.clear": "unsupported:static:Misskey exposes mark-all-as-read, not a portable notification clear operation.",
  "notifications.dismiss": "unsupported:static:Misskey does not expose a verified single-notification dismiss endpoint.",
  "notifications.grouped": "unsupported:static:Misskey notifications are returned as a flat list by this adapter.",
  "notifications.list": "supported:static",
  "notifications.pleromaChatMention": "unsupported:static:Pleroma-specific notification types do not apply to Misskey.",
  "notifications.pleromaEmojiReaction": "unsupported:static:Pleroma-specific notification types do not apply to Misskey.",
  "notifications.pleromaReport": "unsupported:static:Pleroma-specific notification types do not apply to Misskey.",
  "notifications.unreadCount": "unsupported:static:Misskey does not expose a portable notification unread count endpoint.",
  "polls.create": "supported:static",
  "polls.read": "supported:static",
  "polls.vote": "supported:static",
  "posts.create": "supported:static",
  "posts.delete": "supported:static",
  "posts.history": "unsupported:static:Misskey does not expose note edit history.",
  "posts.quote": "supported:static",
  "posts.read": "supported:static",
  "posts.reply": "supported:static",
  "posts.translate": "unsupported:static:Post translation is not mapped by this adapter.",
  "posts.update": "unsupported:static:Misskey does not expose stable note editing.",
  "scheduledPosts.create": "unsupported:static:Misskey does not expose scheduled notes.",
  "scheduledPosts.delete": "unsupported:static:Misskey does not expose scheduled notes.",
  "scheduledPosts.read": "unsupported:static:Misskey does not expose scheduled notes.",
  "scheduledPosts.update": "unsupported:static:Misskey does not expose scheduled notes.",
  "search.accounts": "supported:static",
  "search.hashtags": "supported:static",
  "search.posts": "supported:static",
  "social.block": "supported:static",
  "social.bookmark": "unsupported:static:Misskey favorites are exposed through favourite operations; clip-based bookmarks are not mapped.",
  "social.bookmarkFolders": "unsupported:static:Bookmark folders are not mapped by this adapter.",
  "social.boost": "supported:static",
  "social.favourite": "supported:static",
  "social.follow": "supported:static",
  "social.mute": "supported:static",
  "social.reaction": "supported:probe",
  "streaming.conversations": "unsupported:static:Streaming is not implemented by this adapter yet.",
  "streaming.notifications": "supported:static",
  "streaming.timeline": "supported:static",
  "timelines.hashtag": "supported:static",
  "timelines.home": "supported:static",
  "timelines.list": "supported:static",
  "timelines.local": "supported:static",
  "timelines.public": "supported:static",
}
`;

exports[`server capability snapshots > pleroma > adapter 1`] = `"pleroma"`;

exports[`server capability snapshots > pleroma > capabilities 1`] = `
{
  "accounts.followers": "supported:static",
  "accounts.following": "supported:static",
  "accounts.lookupByHandle": "supported:static",
  "accounts.lookupById": "supported:static",
  "accounts.relationships": "supported:static",
  "accounts.updateProfile": "supported:static",
  "auth.oauth.authorizationCode": "supported:static",
  "auth.oauth.clientCredentials": "unsupported:static:Client-credentials OAuth is not mapped by this adapter.",
  "auth.oauth.refreshToken": "supported:static",
  "auth.passkey": "unsupported:static:Passkey auth is not mapped by this adapter.",
  "auth.tokenInjection": "supported:static",
  "filters.create": "supported:static:Pleroma exposes Mastodon-compatible filter v1 endpoints.",
  "filters.delete": "supported:static:Pleroma exposes Mastodon-compatible filter v1 endpoints.",
  "filters.read": "supported:static:Pleroma exposes Mastodon-compatible filter v1 endpoints.",
  "filters.update": "supported:static:Pleroma exposes Mastodon-compatible filter v1 endpoints.",
  "followRequests.accept": "supported:static",
  "followRequests.list": "supported:static",
  "followRequests.reject": "supported:static",
  "instance.nodeInfo": "supported:static",
  "instance.oauthMetadata": "unknown:static",
  "instance.peers": "unsupported:static:Peer listing is not mapped by this adapter.",
  "lists.create": "supported:static",
  "lists.delete": "supported:static",
  "lists.members": "supported:static",
  "lists.read": "supported:static",
  "lists.update": "supported:static",
  "media.delete": "unsupported:static:Pleroma does not expose media deletion.",
  "media.remoteUrlUpload": "unsupported:static:Remote URL media upload is not mapped by this adapter.",
  "media.update": "supported:static",
  "media.upload": "supported:static",
  "media.urlIngestion": "unsupported:static:URL media ingestion is not mapped by this adapter.",
  "notifications.clear": "supported:static",
  "notifications.dismiss": "supported:static",
  "notifications.grouped": "unsupported:static:Grouped notifications are not mapped by this adapter.",
  "notifications.list": "supported:static",
  "notifications.pleromaChatMention": "supported:static:Pleroma chat mention notifications are normalized by this adapter.",
  "notifications.pleromaEmojiReaction": "supported:static:Pleroma emoji reaction notifications are normalized by this adapter.",
  "notifications.pleromaReport": "supported:static:Pleroma report notifications are normalized by this adapter.",
  "notifications.unreadCount": "unsupported:static:Pleroma does not expose the Mastodon unread-count endpoint.",
  "polls.create": "supported:static",
  "polls.read": "supported:static",
  "polls.vote": "supported:static",
  "posts.create": "supported:static",
  "posts.delete": "supported:static",
  "posts.history": "supported:static",
  "posts.quote": "supported:static",
  "posts.read": "supported:static",
  "posts.reply": "supported:static",
  "posts.translate": "unsupported:static:Post translation is not mapped by this adapter.",
  "posts.update": "supported:static",
  "scheduledPosts.create": "supported:static",
  "scheduledPosts.delete": "supported:static",
  "scheduledPosts.read": "supported:static",
  "scheduledPosts.update": "supported:static",
  "search.accounts": "supported:static",
  "search.hashtags": "supported:static",
  "search.posts": "supported:static",
  "social.block": "supported:static",
  "social.bookmark": "supported:static",
  "social.bookmarkFolders": "unsupported:static:Bookmark folders are not mapped by this adapter.",
  "social.boost": "supported:static",
  "social.favourite": "supported:static",
  "social.follow": "supported:static",
  "social.mute": "supported:static",
  "social.reaction": "supported:static",
  "streaming.conversations": "unsupported:static:Streaming is not implemented by this adapter yet.",
  "streaming.notifications": "supported:static",
  "streaming.timeline": "supported:static",
  "timelines.hashtag": "supported:static",
  "timelines.home": "supported:static",
  "timelines.list": "supported:static",
  "timelines.local": "supported:static",
  "timelines.public": "supported:static",
}
`;
